Fix de formato de fecha

--- a/ZKTekoLibrary/settings.json
+++ b/ZKTekoLibrary/settings.json
@@ -16,7 +16,7 @@
   "ReSendStatus": "Reenviado",
   "SendLog": false,
   "Ignore": true,
-  "OnlySerialsInList": true,
+  "OnlySerialsInList": false,
   "OnlyNewRegs": false
 }
   
